--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,20 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache">
   <title>my-captcha</title>
 </head>
 <body>
   <h1>my captcha</h1>
-  <img src="/static/images/{{img_type}}/{{session['label_num']}}/0.jpg" width=400>
+  <img id="num_img" src="/static/images/{{img_type}}/{{session['label_num']}}/0.jpg" width=400>
   <form action = "/" method = "POST">
      <p>画像の値を入力してください <input type = "text" name = "num" /></p>
      <p><input type = "submit" value = "submit" /></p>
   </form>
 
   {% if ans %}
-    {{ans}}
+    <p class="ans" style="color: red;">{{ans}}<p>
   {% endif %}
 </body>
 </html>
