--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
   <h1>my captcha</h1>
   <img id="num_img" src="/static/images/{{img_type}}/{{session['label_num']}}/0.jpg" width=400>
   <form action = "/" method = "POST">
-     <p>画像の値を入力してください <input type = "text" name = "num" /></p>
-     <p><input type = "submit" value = "submit" /></p>
+     <p>画像の値を入力してください <input type = "text" name = "num" style="font-size: 40px;"/></p>
+     <p><input type = "submit" value = "submit" style="font-size: 40px"/></p>
   </form>
 
   {% if ans %}
