--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,15 @@
   <title>my-captcha</title>
 </head>
 <body>
-  <h1>my captcha</h1>
-  <img id="num_img" src="/static/images/{{img_type}}/{{session['label_num']}}/0.jpg" width=400>
-  <form action = "/" method = "POST">
-     <p>画像の値を入力してください <input type = "text" name = "num" style="font-size: 40px;"/></p>
-     <p><input type = "submit" value = "submit" style="font-size: 40px"/></p>
-  </form>
-
+  <a href="/" style="text-decoration: none; color: black"><h1>my captcha</h1></a>
   {% if ans %}
-    <p class="ans" style="color: red;">{{ans}}<p>
+    <p class="ans" style="color: red; font-size: 40px;">{{ans}}<p>
+  {% else %}
+    <img id="num_img" src="/static/images/{{img_type}}/{{session['label_num']}}/0.jpg" width=400>
+    <form action = "/" method = "POST">
+       <p>画像の値を入力してください <input type = "text" name = "num" style="font-size: 40px;"/></p>
+       <p><input type = "submit" value = "submit" style="font-size: 40px"/></p>
+    </form>
   {% endif %}
 </body>
 </html>
